--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,9 +5,9 @@
 <meta name = "viewport" content = "width = device-width">
 
 <title>Dinobo</title>
-<%= stylesheet_link_tag  'style', "components", media: 'all'%>
+<%= stylesheet_link_tag  'style', "components", "stylesheet-image-based", media: 'all'%>
 <%= javascript_include_tag "application" %>
-  
+ <%= csrf_meta_tags %> 
 </head>
 
 
@@ -19,7 +19,16 @@
    <div class="main">        
            
             <div id="login1">
-               <p style="margin:40px 0 0px 900px;"><a href="#">Login</a></p>
+              <% if user_signed_in? %>
+                <p style="margin:40px 0 0px 900px;">
+                  <%= current_user.name rescue nil %> <%= current_user.last_name rescue nil %>
+                </p>
+              <% else %>
+              <p style="margin:40px 0 0px 900px;">
+                <%= link_to 'Login', new_user_session_path %>
+              </p>
+               
+              <% end %>
             </div>
                 
             <div id="menu">
@@ -27,90 +36,16 @@
                </a>
                 <p style="margin:-56px 0 0 455px;">  <img src="/assets/logo.png"; style="width:120px;"></p>
             </div>
-            <div class="clear"> </div>  
+           
 
               <%= yield %>
 
-            <div class="footer_new">
-  
-         <p style= "float:right;margin:30px 60px 0 0;"><a href="#"><img src="/assets/facebook_icon.png"></a></p>
-              <div class="right" style="width:200px;float:left;">
-                <ul>
-                <li><a href="#">About us</a></li>
-                <li><a href="#">FAQ</a></li>
-                <li><a href="#">Contact us</a></li></ul><br>
-              </div>
-               
-                <div class="left" style="width:200px;float:left;">
-              <ul>  <li><a href="#">Refund policy</a></li>
-                <li><a href="#">Privacy & Terms</a></li>
-                <li><a href="#">Support</a></li></ul></div>
-      </div>
-           
-  </div>
-  
-           
-  
-           
-   <script>
 
-function swap(one, two) {
-    document.getElementById(one).style.display = 'none';
-    document.getElementById(two).style.display = 'block';
-}
-document.getElementById('bt1').addEventListener('click',function(e){
-  document.getElementById('bt2').className = "new_btn2 select2";
-  document.getElementById('bt1').className = "new_btn1";
-    swap('two','one');
-});
-document.getElementById('bt2').addEventListener('click',function(e){
-  document.getElementById('bt2').className = "new_btn2";
-  document.getElementById('bt1').className = "new_btn1 select1";
-    swap('one','two');
-});
-
-</script>       
-                
-  
-  
-    <%= javascript_include_tag "typer" %>
-  
-  <script>
-  jQuery(function () { 
-    
-    jQuery('[data-typer-targets]').typer(); 
-  });
-</script>
-
-<!---------------------------down arrow-------------------------------------------------->
-  
-  <script>
-  
-  jQuery('a').click(function(){
-    jQuery('html, body').animate({
-        scrollTop: jQuery( jQuery(this).attr('href') ).offset().top
-    }, 500);
-    return false;
-});
-  
-  
-  
-  
-  
-  </script>
-  
-  
-               
-     </div><!-------------------main------------------------- -->
-</div> <!-------------------wrapper------------------------- -->
+            </div><!-------------------main------------------------- -->
+        </div> <!-------------------wrapper------------------------- -->
             
-             
-             
-             
-        
-
-
-
-
+            
 </body>
 </html>
+
+            
