--- a/app/views/posts/_overviews.html.erb
+++ b/app/views/posts/_overviews.html.erb
@@ -28,11 +28,25 @@
         
                 <div class="add">
                  <p style="float:left; "> <strong style="font-size:14px; color:#0b243a; font-family:brandon2;"><%= post.user.name rescue nil%> <%= post.user.last_name rescue nil%></strong> ( 5 mutual friends )<br>
-                 May 1 - May 10 <p class="tooltip" style="color:#999;"><img src="/assets/right.png" style="margin:27px 0 0 -70px;"><span class="classic">Drop off ride availabe ($5)</span> </p><br>
-               <p class="add1" style="margin-top:13px; font-size:10px;" >August 12 - August 20 </p><p class="tooltip" style="color:#999;margin-right:-60px;"><img src="/assets/close1.png"style="margin:18px 0 0 94px;"><span class="classic">Pick-up ride unavailabe</span> </p>
-                 <p style="float:right;font-size:11px; margin:-6px 25px 0px 0px; line-height:12px; "><strong style="font-size:14px; color:#0b243a; font-family:brandon2;">0.5 miles</strong><br>
-                 111, 1st Street<br>
-                 Los Angeles, CA 10021
+                  <%= post.drop_off_avaibility_start_date.strftime("%b %e") %> -  <%= post.drop_off_avaibility_end_date.strftime("%b %e") %>
+                  <p class="tooltip" style="color:#999;">
+                  <% if post.drop_off == true %> 
+                    <img src="/assets/right.png" style="margin:27px 0 0 -100px"><span class="classic">Drop-off ride available ($<%= post.price_include_drop_off.to_i %>) </span> <% else %>  <p class="tooltip" style="color:#999;"><img src="/assets/close1.png" style="margin:27px 0 0 -100px"><span class="classic">Drop-off ride unavailable </span> </p><br>
+                  <% end %>
+                  </p><br>
+                 
+               <p class="add1" style="margin-top:13px; font-size:10px;" > <%= post.pick_up_avaibilty_start_date.strftime("%b %e") %> - <%= post.pick_up_avaibility_end_date.strftime("%b %e") %> </p>
+
+               <p class="tooltip" style="color:#999;margin-right:-60px;">
+                <% if post.pick_up == true %> 
+                  <img src="/assets/right.png"style="margin:18px 0 0 94px;"><span class="classic">Pick-up ride available ($ <%= post.price_include_pick_up %>) </span> 
+                <% else %>  
+                  <img src="/assets/close1.png"style="margin:18px 0 0 94px;"> <span class="classic">Pick-Up ride unavailable </span> 
+                <% end %>   
+                </p>
+
+                 <p style="float:right;font-size:11px; margin:-6px 79px 0px 0px; line-height:12px; "><strong style="font-size:14px; color:#0b243a; font-family:brandon2;"><%= params[:search] ?  params[:search][:miles].present? && params[:search][:address].present? ? "#{post.distance.round(2)} miles" : '' : '' %></strong></p>
+                  <div class="address">  <%= post.address %></div>
                 <div class="clear"></div>
                 
                  <p style="font-size:10px;  margin:-10px 0px 0px 10px;"> <%= post.area %> sq.ft.available - <%= truncate(post.additional_comments, :length => 30) %></p>
