--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
             <div id="login1">
               <% if user_signed_in? %>
                 <p style="margin:40px 0 0px 900px;">
-                  <%= current_user.name rescue nil %> <%= current_user.last_name rescue nil %>
+                  <%= current_user.name rescue nil %> <%= current_user.last_name rescue nil %> <%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %>
                 </p>
               <% else %>
               <p style="margin:40px 0 0px 900px;">
