--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -42,19 +42,21 @@
 
             <div class="footer_new">
   
-         <p style= "float:right;margin:30px 60px 0 0;"><a href="#"><img src="/assets/facebook_icon.png"></a></p>
-              <div class="right" style="width:200px;float:left;">
+            <p style= "float:right;margin:30px 60px 0px -150px;"><a href="javascript:void(0);"><img src="/assets/facebook_icon.png"></a> </p>
+            <div class="right" style="width:191px;float:left;"> <!--------9/12/14---------------->
                 <ul>
-                <li><a href="#">About us</a></li>
-                <li><a href="#">FAQ</a></li>
-                <li><a href="#">Contact us</a></li></ul><br>
-              </div>
+                <li><a href="javascript:void(0);">About us</a></li>
+                <li><a href="javascript:void(0);">FAQ</a></li>
+                <li><a href="javascript:void(0);">Contact us</a></li></ul><br>
+            </div>
                
-                <div class="left" style="width:200px;float:left;">
-              <ul>  <li><a href="#">Refund policy</a></li>
-                <li><a href="#">Privacy & Terms</a></li>
-                <li><a href="#">Support</a></li></ul></div>
-      </div>
+              <div class="left" style="width:200px;float:left;">
+                <ul>  <li><a href="javascript:void(0);">Refund policy</a></li>
+                  <li><a href="javascript:void(0);">Privacy & Terms</a></li>
+                  <li><a href="javascript:void(0);">Support</a></li>
+                </ul>
+              </div>
+          </div>
            
   </div>
   
