--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -32,7 +32,7 @@
             </div>
                 
             <div id="menu">
-               <a href="#"> <img src="/assets/menu.png" style="width:95px;">
+               <a href="javascript:void(0);"> <img src="/assets/menu.png" style="width:95px;">
                </a>
                 <p style="margin:-56px 0 0 455px;">  <img src="/assets/logo.png"; style="width:120px;"></p>
             </div>
@@ -84,7 +84,7 @@ document.getElementById('bt2').addEventListener('click',function(e){
                 
   
   
-    <%= javascript_include_tag "typer" %>
+  <%= javascript_include_tag "typer" %>
   
   <script>
   jQuery(function () { 
@@ -93,7 +93,7 @@ document.getElementById('bt2').addEventListener('click',function(e){
   });
 </script>
 
-<!---------------------------down arrow-------------------------------------------------->
+<!-- -------------------------down arrow------------------------------------------------ -->
   
   <script>
   
